[esa2github] Update post.

--- a/articles/88e6719f969599.md
+++ b/articles/88e6719f969599.md
@@ -155,4 +155,71 @@ App\Entity\Foo:
 
 この記事で紹介したような方法でPostgreSQLのidカラムのデフォルト値に `nextval()` が設定されている場合、**`$id` に値を指定してINSERTすると、`nextval()` が実行されない** ため、フィクスチャをロードしたあと、テストコードから普通にエンティティを新規作成しようとすると **id=1をINSERTしようとしてしまい、DBレイヤーでエラーになります。**
 
-なので、テストコード内で新規作成する必要のあるエンティティの `$id` は値を指定することを諦めるしかありません。（要出典）
+~~なので、テストコード内で新規作成する必要のあるエンティティの `$id` は値を指定することを諦めるしかありません。（要出典）~~
+
+このような場合は、`PropertyAccessor` を独自に拡張して、**`$id` に値を指定してINSERTしたときにも `nextval()` を実行するように** してしまうことで解決できます。（DoctrineによるDBの抽象化は台無しになりますが）
+
+具体的には、以下のようなクラスを実装します。
+
+```php
+// tests/Util/Alice/IdSequenceIncrementPropertyAccessor.php
+
+namespace App\Tests\Util\Alice;
+
+use Doctrine\DBAL\Connection;
+use Doctrine\ORM\EntityManagerInterface;
+use Symfony\Component\PropertyAccess\PropertyAccessorInterface;
+use Symfony\Component\PropertyAccess\PropertyPathInterface;
+
+final readonly class IdSequenceIncrementPropertyAccessor implements PropertyAccessorInterface
+{
+    public function __construct(
+        private PropertyAccessorInterface $decorated,
+        private EntityManagerInterface $em,
+        private Connection $connection,
+    ) {
+    }
+
+    public function setValue(object|array &$objectOrArray, PropertyPathInterface|string $propertyPath, mixed $value): void
+    {
+        $this->decorated->setValue($objectOrArray, $propertyPath, $value);
+
+        if (is_object($objectOrArray) && 'id' === $propertyPath) {
+            $tableName = $this->em->getClassMetadata($objectOrArray::class)->getTableName();
+            $this->connection->executeStatement(sprintf('SELECT NEXTVAL(\'%s_id_seq\')', $tableName));
+        }
+    }
+
+    public function getValue(object|array $objectOrArray, PropertyPathInterface|string $propertyPath): mixed
+    {
+        return $this->decorated->getValue($objectOrArray, $propertyPath);
+    }
+
+    public function isWritable(object|array $objectOrArray, PropertyPathInterface|string $propertyPath): bool
+    {
+        return $this->decorated->isWritable($objectOrArray, $propertyPath);
+    }
+
+    public function isReadable(object|array $objectOrArray, PropertyPathInterface|string $propertyPath): bool
+    {
+        return $this->decorated->isReadable($objectOrArray, $propertyPath);
+    }
+}
+```
+
+既存の `PropertyAccessor` をデコレートして、`setValue()` メソッドの実行後に `nextval()` を実行する処理を追加しているだけです。
+
+次に、`config/services_test.yaml` にてこのクラスを `nelmio_alice.property_accessor` サービスのデコレータとして登録します。（Symfonyのサービスデコレート機能については [公式ドキュメント](https://symfony.com/doc/current/service_container/service_decoration.html) をご参照ください）
+
+```yaml
+services:
+  nelmio_alice.property_accessor:
+    class: Nelmio\Alice\PropertyAccess\ReflectionPropertyAccessor
+    arguments: ['@property_accessor']
+
+  # これを追記
+  App\Tests\Util\Alice\IdSequenceIncrementPropertyAccessor:
+    decorates: nelmio_alice.property_accessor
+```
+
+これで、フィクスチャで `$id` に値を指定した場合にも `nextval()` が実行されるため、その後テストコード内でそのエンティティを新規作成しても正しく最新の連番が発行されるようになります🙆‍♂️
