[esa2github] Update post.

--- a/articles/88e6719f969599.md
+++ b/articles/88e6719f969599.md
@@ -223,3 +223,25 @@ services:
 ```
 
 これで、フィクスチャで `$id` に値を指定した場合にも `nextval()` が実行されるため、その後テストコード内でそのエンティティを新規作成しても正しく最新の連番が発行されるようになります🙆‍♂️
+
+ちなみに、`<current()>` の戻り値は `string` 型なので、もし `$id` プロパティの型が `int`  である場合は、`id: <(intval($current))>` のように `int` 型にキャストしてから渡す必要があるので要注意です。
+
+> 参考：[nelmio/aliceでcurrentの値をintegerとして扱う方法について](https://polidog.jp/2023/07/11/nelmio-alice/)
+
+毎回それを書くのが面倒であれば、上記の `PropertyAccessor` クラスを以下のようにしておいてもいいかもしれません。
+
+```php
+public function setValue(object|array &$objectOrArray, PropertyPathInterface|string $propertyPath, mixed $value): void
+{
+    if (is_object($objectOrArray) && 'id' === $propertyPath) {
+        $value = intval($value);
+    }
+
+    $this->decorated->setValue($objectOrArray, $propertyPath, $value);
+
+    if (is_object($objectOrArray) && 'id' === $propertyPath) {
+        $tableName = $this->em->getClassMetadata($objectOrArray::class)->getTableName();
+        $this->connection->executeStatement(sprintf('SELECT NEXTVAL(\'%s_id_seq\')', $tableName));
+    }
+}
+```
