--- a/articles/1f1572cfd2e375.md
+++ b/articles/1f1572cfd2e375.md
@@ -16,6 +16,16 @@ published_at: 2021-06-05
 [こちらの別記事](https://zenn.dev/ttskch/articles/8ee0eaaabf0657) で使い方など詳しくご紹介していますので、ぜひご参照ください！
 :::
 
+# 2024/05/07 追記
+
+最新の登壇スライドバージョンはこちらです。
+
+@[speakerdeck](9ada4bc0ff194c9ab500063c0a75dec5)
+
+登壇時の様子がYouTubeに上がっているのでよろしければあわせてご覧ください。
+
+https://www.youtube.com/watch?v=tIxd8C5IDLQ
+
 # はじめに
 
 * 言い切りタイトルすみません
