--- a/articles/18cb489ff67b2b.md
+++ b/articles/18cb489ff67b2b.md
@@ -11,6 +11,20 @@ published_at: 2020-03-12
 この記事は、2020-03-12に別のブログ媒体に投稿した記事のアーカイブです。
 :::
 
+# 2025/05/26 追記
+
+PHP 7.4以降では [配列のアンパック](https://www.php.net/manual/ja/language.types.array.php#language.types.array.unpacking) を使って配列同士を結合する方法もあります。
+
+配列のアンパックを使って2つの配列 `$a` と `$b` を結合した新たな配列 `$c` を得るには、次のように書くことができます。
+
+```php
+$c = [...$a, ...$b]
+```
+
+アンパックによる配列の結合は `array_merge()` による配列の結合と動作としては等価です。
+
+---
+
 PHPで配列をマージ（結合）する方法は3通りあります。
 
 * `+` 演算子を使って配列同士を加算する
