[esa2github] Update post.

--- a/articles/309423d26a1aaa.md
+++ b/articles/309423d26a1aaa.md
@@ -168,7 +168,7 @@ https://github.com/ttskch/jp-postal-code-api/blob/477735ab7f169e573f920af0b2aadb
 
 今まで [madefor/postal-code-api](https://github.com/madefor/postal-code-api) をありがたく使わせていただいていたのですが、配信データの自動更新が3年以上止まったままになってしまっており、[2024/01/01にあった浜松市の市町村変更](https://www.post.japanpost.jp/zipcode/merge/index.html) が取り込まれていなかったために直近のクライアントワークで問題が発生してしまいました。
 
-初めはビルド周りを修正してPull Requestを送ろうと思ったのですが、既存のPull Requestが放置されていたり、実質的に開発が停止してしまっているようにお見受けしたため、むしろ自分がメンテしやすい技術スタックで作り直して長期的にホストし続けるほうが幸福度が高いかなと思い、あえて再実装することにしました。
+初めはビルド周りを修正してPull Requestを送ろうと思ったのですが、既存のPull Requestが放置されていたり、実質的に開発が停止してしまっているようにお見受けしたため、むしろ自分がメンテしやすい技術スタックで作り直して長期的にホストし続けるほうが全体の幸福度が高いかなと思い、あえて再実装することにしました。
 
 郵便番号を入力したら自動で住所が補完されるフォームの実装とかで気軽に使っていただけたら嬉しいです。
 
