[esa2github] Update post.

--- a/articles/309423d26a1aaa.md
+++ b/articles/309423d26a1aaa.md
@@ -26,14 +26,14 @@ published: true
 # 使い方
 
 ```
-https://jp-postal-code-api.ttskch.com/api/{郵便番号}.json
+https://jp-postal-code-api.ttskch.com/api/v1/{郵便番号}.json
 ```
 
 というエンドポイントにGETリクエストを送ると、住所のデータがJSON形式で取得できます。
 
 例えば、郵便番号が `100-0014` の住所（東京都千代田区永田町）を取得したい場合は、エンドポイントのURLとレスポンスの内容は以下のようになります。
 
-<https://jp-postal-code-api.ttskch.com/api/1000014.json>
+<https://jp-postal-code-api.ttskch.com/api/v1/1000014.json>
 
 ```json
 {
@@ -62,7 +62,7 @@ https://jp-postal-code-api.ttskch.com/api/{郵便番号}.json
 
 1つの郵便番号に複数の住所がある場合は、レスポンスの内容は以下のようになります。
 
-<https://jp-postal-code-api.ttskch.com/api/6180000.json>
+<https://jp-postal-code-api.ttskch.com/api/v1/6180000.json>
 
 ```json
 {
@@ -108,7 +108,7 @@ https://jp-postal-code-api.ttskch.com/api/{郵便番号}.json
 
 大口事業所個別番号では英語表記の住所は空になります。
 
-<https://jp-postal-code-api.ttskch.com/api/1008111.json>
+<https://jp-postal-code-api.ttskch.com/api/v1/1008111.json>
 
 ```json
 {
@@ -141,7 +141,7 @@ https://jp-postal-code-api.ttskch.com/api/{郵便番号}.json
 
 1. [日本郵便のWebサイト](https://www.post.japanpost.jp/zipcode/download.html) から [住所の郵便番号](https://www.post.japanpost.jp/zipcode/dl/roman-zip.html) と [事業所の個別郵便番号](https://www.post.japanpost.jp/zipcode/dl/jigyosyo/index-zip.html) のデータをダウンロード
 2. ダウンロードしたZipファイルからCSVファイルを取得
-3. CSVファイルをパースし、配信データとしてのJSONファイル群を `/docs/api/` 配下に生成
+3. CSVファイルをパースし、配信データとしてのJSONファイル群を `/docs/api/v1/` 配下に生成
 
 という処理をPHPで行っています。
 
@@ -151,7 +151,7 @@ https://jp-postal-code-api.ttskch.com/api/{郵便番号}.json
 
 https://github.com/ttskch/jp-postal-code-api/blob/477735ab7f169e573f920af0b2aadb945ec1f0c4/.github/workflows/cron.yaml#L8-L58
 
-上記のように、GitHub ActionsのScheduled Workflowを使って [毎日午前0時頃に自動的に](https://github.com/ttskch/jp-postal-code-api/actions/workflows/cron.yaml?query=branch:main) `/docs/api/` の内容を最新化しています。
+上記のように、GitHub ActionsのScheduled Workflowを使って [毎日午前0時頃に自動的に](https://github.com/ttskch/jp-postal-code-api/actions/workflows/cron.yaml?query=branch:main) `/docs/api/v1/` の内容を最新化しています。
 
 ただし、[GitHub Actionsのドキュメントにあるとおり](https://docs.github.com/ja/actions/using-workflows/disabling-and-enabling-a-workflow#:~:text=%E3%83%91%E3%83%96%E3%83%AA%E3%83%83%E3%82%AF%E3%83%AA%E3%83%9D%E3%82%B8%E3%83%88%E3%83%AA%E3%81%A7%E3%81%AF%E3%80%8160%E6%97%A5%E9%96%93%E3%81%AB%E3%83%AA%E3%83%9D%E3%82%B8%E3%83%88%E3%83%AA%E3%81%AB%E3%82%A2%E3%82%AF%E3%83%86%E3%82%A3%E3%83%93%E3%83%86%E3%82%A3%E3%81%8C%E3%81%AA%E3%81%8B%E3%81%A3%E3%81%9F%E5%A0%B4%E5%90%88%E3%80%81%E3%82%B9%E3%82%B1%E3%82%B8%E3%83%A5%E3%83%BC%E3%83%AB%E3%81%95%E3%82%8C%E3%81%9F%E3%83%AF%E3%83%BC%E3%82%AF%E3%83%95%E3%83%AD%E3%83%BC%E3%81%AF%E8%87%AA%E5%8B%95%E7%9A%84%E3%81%AB%E7%84%A1%E5%8A%B9%E5%8C%96%E3%81%95%E3%82%8C%E3%81%BE%E3%81%99%E3%80%82)、60日間リポジトリにアクティビティがなかった場合、Scheduled Workflowは自動的に無効化されてしまうため、
 
