[esa2github] Update post.

--- a/articles/309423d26a1aaa.md
+++ b/articles/309423d26a1aaa.md
@@ -12,12 +12,17 @@ published: true
 
 [![](https://img.esa.io/uploads/production/attachments/15064/2024/05/28/77821/0fd9da6b-5cd2-44bb-9965-f68f9ce8a873.png)](https://github.com/ttskch/jp-postal-code-api)
 
-
 日本の郵便番号から住所のデータを取得できるWeb APIです。
 
 **GitHub Pagesを使用して静的なJSONファイルとして配信している** ため、可用性が高いのが特徴です。また、**オープンソースなのでクライアントワークでも安心してご使用いただけます**。もし永続性が心配な場合はご自由にフォークしてご利用ください。
 
-[日本郵便によって公開されているデータ](https://www.post.japanpost.jp/zipcode/download.html) を元に住所データのJSONファイルを生成して配信しています。JSONファイルには日本語表記と英語表記の住所データが含まれています。ただし、大口事業所個別番号は英語表記には対応していません。
+[日本郵便によって公開されているデータ](https://www.post.japanpost.jp/zipcode/download.html) を元に住所データのJSONファイルを生成して配信しています。JSONファイルには日本語表記・カナ表記・英語表記の住所データが含まれています。ただし、以下の注意事項があります。
+
+* 大口事業所個別番号の住所データは以下のように出力されます（[元データ](https://www.post.japanpost.jp/zipcode/dl/jigyosyo/index-zip.html) の内容がそうであるため）
+    * カナ表記は事業所名についてのみ出力されます
+    * 事業所名のカナ表記は促音・拗音が大書きで出力されます
+    * 英語表記は出力されません
+* 直近1年程度以内に [市町村変更があった住所](https://www.post.japanpost.jp/zipcode/merge/index.html) については、英語表記は出力されません（[元データが年1回程度しか更新されない](https://www.post.japanpost.jp/zipcode/dl/roman-zip.html) ため）
 
 なお、配信データはGitHub Actionsを使用して [毎日最新の内容に更新しています](https://github.com/ttskch/jp-postal-code-api/actions/workflows/cron.yaml?query=branch:main)。
 
@@ -26,102 +31,166 @@ published: true
 # 使い方
 
 ```
-https://jp-postal-code-api.ttskch.com/api/v1/{郵便番号}.json
+https://jp-postal-code-api.ttskch.com/api/v2/{郵便番号}.json
 ```
 
 というエンドポイントにGETリクエストを送ると、住所のデータがJSON形式で取得できます。
 
 例えば、郵便番号が `100-0014` の住所（東京都千代田区永田町）を取得したい場合は、エンドポイントのURLとレスポンスの内容は以下のようになります。
 
-<https://jp-postal-code-api.ttskch.com/api/v1/1000014.json>
+<https://jp-postal-code-api.ttskch.com/api/v2/1000014.json>
 
 ```json
 {
-    "postalCode": "1000014",
-    "addresses": [
-        {
-            "prefectureCode": "13",
-            "ja": {
-                "prefecture": "東京都",
-                "address1": "千代田区",
-                "address2": "永田町",
-                "address3": "",
-                "address4": ""
-            },
-            "en": {
-                "prefecture": "Tokyo",
-                "address1": "Chiyoda-ku",
-                "address2": "Nagatacho ",
-                "address3": "",
-                "address4": ""
-            }
-        }
-    ]
+  "postalCode": "1000014",
+  "addresses": [
+    {
+      "prefectureCode": "13",
+      "ja": {
+        "prefecture": "東京都",
+        "address1": "千代田区",
+        "address2": "永田町",
+        "address3": "",
+        "address4": ""
+      },
+      "kana": {
+        "prefecture": "トウキョウト",
+        "address1": "チヨダク",
+        "address2": "ナガタチョウ",
+        "address3": "",
+        "address4": ""
+      },
+      "en": {
+        "prefecture": "Tokyo",
+        "address1": "Chiyoda-ku",
+        "address2": "Nagatacho ",
+        "address3": "",
+        "address4": ""
+      }
+    }
+  ]
 }
 ```
 
 1つの郵便番号に複数の住所がある場合は、レスポンスの内容は以下のようになります。
 
-<https://jp-postal-code-api.ttskch.com/api/v1/6180000.json>
+<https://jp-postal-code-api.ttskch.com/api/v2/6180000.json>
 
 ```json
 {
-    "postalCode": "6180000",
-    "addresses": [
-        {
-            "prefectureCode": "26",
-            "ja": {
-                "prefecture": "京都府",
-                "address1": "乙訓郡大山崎町",
-                "address2": "",
-                "address3": "",
-                "address4": ""
-            },
-            "en": {
-                "prefecture": "Kyoto",
-                "address1": "Oyamazaki-cho, Otokuni-gun",
-                "address2": "",
-                "address3": "",
-                "address4": ""
-            }
-        },
-        {
-            "prefectureCode": "27",
-            "ja": {
-                "prefecture": "大阪府",
-                "address1": "三島郡島本町",
-                "address2": "",
-                "address3": "",
-                "address4": ""
-            },
-            "en": {
-                "prefecture": "Osaka",
-                "address1": "Shimamoto-cho, Mishima-gun",
-                "address2": "",
-                "address3": "",
-                "address4": ""
-            }
-        }
-    ]
+  "postalCode": "6180000",
+  "addresses": [
+    {
+      "prefectureCode": "26",
+      "ja": {
+        "prefecture": "京都府",
+        "address1": "乙訓郡大山崎町",
+        "address2": "",
+        "address3": "",
+        "address4": ""
+      },
+      "kana": {
+        "prefecture": "キョウトフ",
+        "address1": "オトクニグンオオヤマザキチョウ",
+        "address2": "",
+        "address3": "",
+        "address4": ""
+      },
+      "en": {
+        "prefecture": "Kyoto",
+        "address1": "Oyamazaki-cho, Otokuni-gun",
+        "address2": "",
+        "address3": "",
+        "address4": ""
+      }
+    },
+    {
+      "prefectureCode": "27",
+      "ja": {
+        "prefecture": "大阪府",
+        "address1": "三島郡島本町",
+        "address2": "",
+        "address3": "",
+        "address4": ""
+      },
+      "kana": {
+        "prefecture": "オオサカフ",
+        "address1": "ミシマグンシマモトチョウ",
+        "address2": "",
+        "address3": "",
+        "address4": ""
+      },
+      "en": {
+        "prefecture": "Osaka",
+        "address1": "Shimamoto-cho, Mishima-gun",
+        "address2": "",
+        "address3": "",
+        "address4": ""
+      }
+    }
+  ]
 }
 ```
 
 大口事業所個別番号では英語表記の住所は空になります。
 
-<https://jp-postal-code-api.ttskch.com/api/v1/1008111.json>
+<https://jp-postal-code-api.ttskch.com/api/v2/1008111.json>
 
 ```json
 {
-    "postalCode": "1008111",
+  "postalCode": "1008111",
+  "addresses": [
+    {
+      "prefectureCode": "13",
+      "ja": {
+        "prefecture": "東京都",
+        "address1": "千代田区",
+        "address2": "千代田",
+        "address3": "１−１",
+        "address4": "宮内庁"
+      },
+      "kana": {
+        "prefecture": "",
+        "address1": "",
+        "address2": "",
+        "address3": "",
+        "address4": "クナイチヨウ"
+      },
+      "en": {
+        "prefecture": "",
+        "address1": "",
+        "address2": "",
+        "address3": "",
+        "address4": ""
+      }
+    }
+  ]
+}
+```
+
+[2024年1月1日に市町村変更があった住所](https://www.post.japanpost.jp/zipcode/merge/index.html) を取得すると、2024年5月現在では英語表記は出力されません。[元データ](https://www.post.japanpost.jp/zipcode/dl/roman-zip.html) が更新されると、このWeb APIの配信データも最大1日の誤差で自動的に更新されます。
+
+<https://jp-postal-code-api.ttskch.com/api/v2/4328003.json>
+
+```json
+{
+    "postalCode": "4328003",
     "addresses": [
         {
-            "prefectureCode": "13",
+            "prefectureCode": "22",
             "ja": {
-                "prefecture": "東京都",
-                "address1": "千代田区",
-                "address2": "千代田",
-                "address3": "１−１",
-                "address4": "宮内庁"
+                "prefecture": "静岡県",
+                "address1": "浜松市中央区",
+                "address2": "和地山",
+                "address3": "",
+                "address4": ""
+            },
+            "kana": {
+                "prefecture": "シズオカケン",
+                "address1": "ハママツシチュウオウク",
+                "address2": "ワジヤマ",
+                "address3": "",
+                "address4": ""
             },
             "en": {
                 "prefecture": "",
@@ -139,9 +208,10 @@ https://jp-postal-code-api.ttskch.com/api/v1/{郵便番号}.json
 
 ## 配信データの生成
 
-1. [日本郵便のWebサイト](https://www.post.japanpost.jp/zipcode/download.html) から [住所の郵便番号](https://www.post.japanpost.jp/zipcode/dl/roman-zip.html) と [事業所の個別郵便番号](https://www.post.japanpost.jp/zipcode/dl/jigyosyo/index-zip.html) のデータをダウンロード
+1. [日本郵便のWebサイト](https://www.post.japanpost.jp/zipcode/download.html) から [住所の郵便番号](https://www.post.japanpost.jp/zipcode/dl/kogaki-zip.html)、[住所の郵便番号（ローマ字）](https://www.post.japanpost.jp/zipcode/dl/roman-zip.html)、[事業所の個別郵便番号](https://www.post.japanpost.jp/zipcode/dl/jigyosyo/index-zip.html) のデータをダウンロード
 2. ダウンロードしたZipファイルからCSVファイルを取得
-3. CSVファイルをパースし、配信データとしてのJSONファイル群を `/docs/api/v1/` 配下に生成
+3. CSVファイルをパースし、配信データとしてのJSONファイル群を `/docs/api/v2/` 配下に生成
+    * その際、「住所の郵便番号」と「住所の郵便番号（ローマ字）」のデータを、日本語表記の住所が一致している場合にのみマージ
 
 という処理をPHPで行っています。
 
@@ -149,7 +219,7 @@ https://jp-postal-code-api.ttskch.com/api/v1/{郵便番号}.json
 
 ## GitHub Pagesの自動更新
 
-https://github.com/ttskch/jp-postal-code-api/blob/477735ab7f169e573f920af0b2aadb945ec1f0c4/.github/workflows/cron.yaml#L8-L58
+https://github.com/ttskch/jp-postal-code-api/blob/8d8626dbcf8102599554f4d2c982628d8b7a694b/.github/workflows/cron.yaml#L8-L59
 
 上記のように、GitHub ActionsのScheduled Workflowを使って [毎日午前0時頃に自動的に](https://github.com/ttskch/jp-postal-code-api/actions/workflows/cron.yaml?query=branch:main) `/docs/api/v1/` の内容を最新化しています。
 
@@ -160,7 +230,7 @@ https://github.com/ttskch/jp-postal-code-api/blob/477735ab7f169e573f920af0b2aadb
 
 という方法でWorkflowの自動的な無効化を回避しています（ごめんなさい）。
 
-https://github.com/ttskch/jp-postal-code-api/blob/477735ab7f169e573f920af0b2aadb945ec1f0c4/.github/workflows/cron.yaml#L60-L90
+https://github.com/ttskch/jp-postal-code-api/blob/8d8626dbcf8102599554f4d2c982628d8b7a694b/.github/workflows/cron.yaml#L61-L91
 
 [Workflowの有効化はAPI経由でも行える](https://docs.github.com/ja/rest/actions/workflows?apiVersion=2022-11-28) ので、自動的に無効になったらAPI経由で再度有効化する、みたいな対応も考えられましたが、GitHub Actionsだけで完結できたほうが嬉しいのでこのような方法をとりました。
 
