--- a/articles/309423d26a1aaa.md
+++ b/articles/309423d26a1aaa.md
@@ -14,7 +14,7 @@ published: true
 
 日本の郵便番号から住所のデータを取得できるWeb APIです。
 
-**GitHub Pagesを使用して静的なJSONファイルとして配信している** ため、可用性が高いのが特徴です。また、**オープンソースなのでクライアントワークでも安心してご使用いただけます**。もし永続性が心配な場合はご自由にフォークしてご利用ください。
+**GitHub Pagesを使用して静的なJSONファイルとして配信している** ため、可用性が高いのが特徴です。また、**オープンソースなのでクライアントワークでも安心してご使用いただけます**。もしリポジトリの永続性や [GitHub Pagesの利用制限](#github-pagesの利用制限について) が心配な場合は、ご自由にフォークしてご利用ください。
 
 [日本郵便によって公開されているデータ](https://www.post.japanpost.jp/zipcode/download.html) を元に住所データのJSONファイルを生成して配信しています。JSONファイルには日本語表記・カナ表記・英語表記の住所データが含まれています。ただし、以下の注意事項があります。
 
@@ -233,6 +233,20 @@ https://github.com/ttskch/jp-postal-code-api/blob/8d8626dbcf8102599554f4d2c98262
 https://github.com/ttskch/jp-postal-code-api/blob/8d8626dbcf8102599554f4d2c982628d8b7a694b/.github/workflows/cron.yaml#L61-L91
 
 [Workflowの有効化はAPI経由でも行える](https://docs.github.com/ja/rest/actions/workflows?apiVersion=2022-11-28) ので、自動的に無効になったらAPI経由で再度有効化する、みたいな対応も考えられましたが、GitHub Actionsだけで完結できたほうが嬉しいのでこのような方法をとりました。
+
+# GitHub Pagesの利用制限について
+
+2024年5月現在、GitHub Pagesで公開したサイトには [月当たり100GBの帯域制限](https://docs.github.com/ja/pages/getting-started-with-github-pages/about-github-pages#:~:text=GitHub%20Pages%20%E3%82%B5%E3%82%A4%E3%83%88%E3%81%AB%E3%81%AF%E3%80%81%E6%9C%88%E5%BD%93%E3%81%9F%E3%82%8A%20100%20GB%20%E3%81%AE%20%E3%82%BD%E3%83%95%E3%83%88%E3%81%AA%20%E5%B8%AF%E5%9F%9F%E5%B9%85%E5%88%B6%E9%99%90%E3%81%8C%E3%81%82%E3%82%8A%E3%81%BE%E3%81%99%E3%80%82) があります。このWeb APIの配信データの容量は平均およそ400バイトなので、毎秒104リクエスト程度のペースが1ヶ月間継続すると制限の対象となる可能性があります。
+
+もしこの制限が心配な場合は、本リポジトリをフォークしてご自身のGitHubアカウントでホストしてご利用ください。その場合、エンドポイントのURLは
+
+```
+https://{あなたのGitHubユーザー名}.github.io/jp-postal-code-api/api/v1/{郵便番号}.json
+```
+
+のようになります。
+
+ただし、それでも悪意ある攻撃者によって大量のリクエストが行われると利用制限の対象になる可能性があります。どうしても心配な場合は、フォークしたリポジトリを [Cloudflare Pages](https://www.cloudflare.com/ja-jp/developer-platform/pages/) などの多機能なホスティングサービスやその他PaaSなどに接続して、BASIC認証などをかけた状態でWeb APIをホストするといった運用を検討してください。
 
 # おわりに
 
