[esa2github] Update post.

--- a/articles/e6f6b2af2972ab.md
+++ b/articles/e6f6b2af2972ab.md
@@ -159,7 +159,7 @@ direnv: export +PHP_INI_SCAN_DIR ~PATH
 
 ちなみに、[Symfony CLI](https://github.com/symfony-cli/symfony-cli) が提供する `symfony` コマンドには、[プロジェクトルートの `.php-version` ファイルでPHPバージョンを指定したり、プロジェクトルートの `php.ini` ファイルで `symfony` コマンド経由のプロセスのPHP実行時設定を上書きできたり](https://symfony.com/doc/current/setup/symfony_server.html#different-php-settings-per-project) という便利な機能があるので、Symfonyプロジェクトにおいてはdirenvの代わりにこれを使っても似たような体験が得られそうですが、`composer` コマンドや任意のPHPスクリプトをCLIで実行する際にもいちいち `symfony composer` や `symfony php` とタイプしなければならず、だいぶ面倒なので僕は常にdirenvを使った運用に統一しています。
 
-# おまけ：ディレクトリごとにComposerのバージョンを切り替える
+# おまけ：ディレクトリごとにComposerのバージョンを切り替える（追記あり）
 
 特定のディレクトリで特定のバージョンのComposerを使いたいことがたまにあります。（チーム開発プロジェクトで、`composer.lock` をバージョン管理していて、Composerのバージョンの違いによって動作に影響があったり、`composer.lock` に差分が出てしまったりするケース）
 
@@ -191,6 +191,16 @@ Composer version 2.6.6 2023-12-08 18:32:26
 ```
 
 ダウンロードした `composer` ファイルをバージョン管理したくない場合は `.gitignore` に追記しておきましょう。
+
+## 2024-06-06 追記
+
+Composerの公式サイトで配布されている各バージョンを個別にインストールできるHomebrew tapを作りました。
+
+<https://github.com/ttskch/homebrew-composer/>
+
+[![](https://img.esa.io/uploads/production/attachments/15064/2024/06/06/77821/c8e6681b-c8fe-4011-b7a3-325ec29d7cb3.png)](https://github.com/ttskch/homebrew-composer/)
+
+GitHub Actions経由で毎日自動更新するようにしてあるので陳腐化しません。よろしければご活用ください。
 
 # おわりに
 
