[esa2github] Update post.

--- a/articles/e6f6b2af2972ab.md
+++ b/articles/e6f6b2af2972ab.md
@@ -165,7 +165,7 @@ direnv: export +PHP_INI_SCAN_DIR ~PATH
 
 これに関しては残念ながらスマートな解決策はないので、プロジェクトルートディレクトリ直下に使いたいバージョンのバイナリを置いておいて、direnvでプロジェクトルートディレクトリにPATHを通す、という原始的な方法をとっています😓
 
-Composerの各バージョンのバイナリは https://getcomposer.org/download/ ここからダウンロードできます。
+Composerの各バージョンのバイナリは <https://getcomposer.org/download/> ここからダウンロードできます。
 
 例えば 2.6.6 を使いたい場合なら、
 
@@ -196,7 +196,7 @@ Composer version 2.6.6 2023-12-08 18:32:26
 
 Composerの公式サイトで配布されている各バージョンを個別にインストールできるHomebrew tapを作りました。
 
-<https://github.com/ttskch/homebrew-composer/>
+<https://github.com/ttskch/homebrew-composer>
 
 [![](https://img.esa.io/uploads/production/attachments/15064/2024/06/06/77821/c8e6681b-c8fe-4011-b7a3-325ec29d7cb3.png)](https://github.com/ttskch/homebrew-composer/)
 
@@ -223,7 +223,7 @@ Composer version 2.6.6 2023-12-08 18:32:26
 
 便利ですね😋
 
-ちなみに、<https://github.com/ttskch/homebrew-composer/> はGitHub Actions経由で毎日自動更新するようにしてあるので時間が経っても陳腐化しません。よろしければご活用ください。
+ちなみに、<https://github.com/ttskch/homebrew-composer> はGitHub Actions経由で毎日自動更新するようにしてあるので時間が経っても陳腐化しません。よろしければご活用ください。
 
 # おわりに
 
