[esa2github] Update post.

--- a/articles/e63b6e734c0d5f.md
+++ b/articles/e63b6e734c0d5f.md
@@ -1,5 +1,5 @@
 ---
-title: "Symfony Messengerのmessage-consumeコマンドをcronで手軽に擬似常駐"
+title: "Symfony Messengerのmessage:consumeコマンドをcronで手軽に擬似常駐"
 emoji: "🎻"
 type: "tech"
 topics: ["php", "symfony", "cron"]
