[esa2github] Update post.

--- a/articles/80d7d7473344c7.md
+++ b/articles/80d7d7473344c7.md
@@ -2,7 +2,7 @@
 title: "抽象クラスとインターフェースの違い"
 emoji: "🐥"
 type: "tech"
-topics: ["抽象クラス", "インターフェース", "interface", "php", "oop]
+topics: ["抽象クラス", "インターフェース", "interface", "php", "oop"]
 published: true
 ---
 
