[esa2github] Update post.

--- a/articles/80d7d7473344c7.md
+++ b/articles/80d7d7473344c7.md
@@ -20,7 +20,7 @@ published: true
 
 抽象クラスとインターフェース、難しいですよね。自分も初心者の頃この辺りが一番苦手で、本当にさっぱり分かっていませんでした。
 
-インターフェースと抽象クラスはとても似ていて、どちらも
+抽象クラスとインターフェースはとても似ていて、どちらも
 
 * 通常のクラスと違って、それ単体では「実体」を作れない
 * つまり何かしらの「概念」だけをまとめたものである
