[esa2github] Update post.

--- a/articles/80d7d7473344c7.md
+++ b/articles/80d7d7473344c7.md
@@ -95,7 +95,7 @@ class 豚 extends 動物 {
 「犬」「猫」「豚」「牛」という4つのクラスには「動物である」という共通点がありましたが、**視点を変えて、「豚」と「牛」だけに注目すると、「（人が）食べることができる」という共通点もありますよね。**
 
 「動物である」という概念に対しては「これをベースに個別の動物を作る」という発想になりましたが、「食べることができる」という概念はそれとはちょっと違うと思いませんか？
-「豚」も「牛」も「キャベツ」も「ホタテ」も「パン」も「豆腐」も、すべて「食べることができる」という性質を持っていますが、「何かをベースとした派生形である」ようには思ません。
+「豚」も「牛」も「キャベツ」も「ホタテ」も「パン」も「豆腐」も、すべて「食べることができる」という性質を持っていますが、「何かをベースとした派生形である」ようには思えません。
 
 このように、同じ「概念」でも、**抽象クラスのようにクラスのベースにするのではなく、「クラスに『性質』を後付けする」ために使うのがインターフェースです。**
 
