[esa2github] Update post.

--- a/articles/69c783d37ba3ab.md
+++ b/articles/69c783d37ba3ab.md
@@ -79,7 +79,7 @@ class CreatableChoiceType extends AbstractType
 $builder
     ->add('foos', CreatableChoiceType::class, [
         'choices' => array_combine($values = ['選択肢1', '選択肢2', '選択肢3'], $values),
-        'multiple' => true,
+        'multiple' => true, // もちろん false でも OK
     ])
 ;
 ```
@@ -110,8 +110,6 @@ $builder
   {
 +     public function buildForm(FormBuilderInterface $builder, array $options): void
 +     {
-+         parent::buildForm($builder, $options);
-+ 
 +         $builder->addEventListener(FormEvents::PRE_SUBMIT, fn (FormEvent $event) => $event->stopPropagation(), 1); // ①
 +         $builder->addEventListener(FormEvents::POST_SUBMIT, fn (FormEvent $event) => $event->stopPropagation(), 1); // ②
 +         $builder->resetViewTransformers(); // ③
@@ -122,7 +120,6 @@ $builder
           $resolver->setDefaults([
               'attr' => [
                   'data-placeholder' => '選択または入力してください',
-                  'data-controller' => 'autocomplete',
               ],
               'autocomplete' => true,
               'tom_select_options' => [
@@ -158,9 +155,9 @@ $builder
 
 これは、CreatableChoiceTypeを描画する際に、`choices` にあるものだけが `<option>` タグとして出力されるため、Tom Selectが `<select>` タグをもとに初期化処理を行う時点ですでに「選択肢以外にどんな値が手入力されていたのか」という情報が消失してしまっているためです。
 
-なので、対処方法としては、data属性などに実際の値のリストを持たせた状態で `<select>` タグを出力し、Tom Selectの初期化処理においてそのdata属性から取得した値リストを選択状態にするような処理を自前でカスタマイズして書く、ということが必要になります。
+なので、対処方法としては、`PRE_SET_DATA` などのタイミングで、実際にセットされているデータをもとに `choices` の内容を更新してあげればよいです。
 
-まずはCreatableChoiceTypeに以下のコードを追記し、フォームにセットされている値のリストを `data-data` というdata属性に持たせておくようにします。
+実装例は以下のような感じです。
 
 ```diff
   <?php
@@ -174,140 +171,140 @@ $builder
   use Symfony\Component\Form\FormBuilderInterface;
   use Symfony\Component\Form\FormEvent;
   use Symfony\Component\Form\FormEvents;
-+ use Symfony\Component\Form\FormInterface;
-+ use Symfony\Component\Form\FormView;
   use Symfony\Component\OptionsResolver\OptionsResolver;
   
   class CreatableChoiceType extends AbstractType
   {
       public function buildForm(FormBuilderInterface $builder, array $options): void
       {
-          parent::buildForm($builder, $options);
-  
           $builder->addEventListener(FormEvents::PRE_SUBMIT, fn (FormEvent $event) => $event->stopPropagation(), 1);
           $builder->addEventListener(FormEvents::POST_SUBMIT, fn (FormEvent $event) => $event->stopPropagation(), 1);
           $builder->resetViewTransformers();
++ 
++         $builder->addEventListener(FormEvents::PRE_SET_DATA, $this->onPreSetData(...)); // ①
+      }
++ 
++     public function onPreSetData(PreSetDataEvent $event): void
++     {
++         $this->updateChoices($event->getForm(), $event->getData()); // ②
++     }
+  
+      public function configureOptions(OptionsResolver $resolver): void
+      {
+          $resolver->setDefaults([
+              'attr' => [
+                  'data-placeholder' => '選択または入力してください',
+              ],
+              'autocomplete' => true,
+              'tom_select_options' => [
+                  'create' => true,
+                  'createOnBlur' => true,
+                  'persist' => false,
+              ],
+          ]);
       }
   
-+     public function buildView(FormView $view, FormInterface $form, array $options): void
-+     {
-+         parent::buildView($view, $form, $options);
+      public function getParent(): string
+      {
+          return ChoiceType::class;
+      }
 + 
-+         $data = json_encode($view->vars['data'], JSON_UNESCAPED_UNICODE | JSON_THROW_ON_ERROR);
-+         $view->vars['attr']['data-data'] = $data;
++     private function updateChoices(FormInterface $form, mixed $data): void
++     {
++         $fieldName = trim(strval($form->getPropertyPath()), '[]'); //
++         $fieldOptions = $form->getConfig()->getOptions();          // ③
++         $fieldOptions['choices'] ??= null;                         //
++ 
++         $parent = $form->getParent();
++ 
++         $originalChoices = $fieldOptions['choices'];
++ 
++         if ($fieldOptions['multiple']) {                                                                    //
++             $data ??= [];                                                                                   //
++             $fieldOptions['choices'] = array_unique([...$originalChoices, ...array_combine($data, $data)]); // ④
++         } else {                                                                                            //
++             $fieldOptions['choices'][strval($data)] = strval($data);                                        //
++         }
++ 
++         if ($originalChoices !== $fieldOptions['choices']) {       //
++             $type = $form->getConfig()->getType()->getInnerType(); // ⑤
++             $parent->add($fieldName, $type::class, $fieldOptions); //
++         }
++     }
+  }
+```
+
+①で `PRE_SET_DATA` にイベントリスナーを登録し、②で実処理をprivateメソッドに移譲、③〜⑤がその実処理です。
+
+まず③でフォームフィールドの `choices` などの設定内容を取得しています。
+
+④で、フォームフィールドが `multiple` かどうかに応じて、手入力されたデータを `choices` に追加しています。
+
+最後に⑤で、`choices` のもともとの設定内容から変化があった（＝手入力されたデータがあった）場合のみ、フォームフィールドをフォームに追加し直すことで変更後の `choices` を有効にしています。「変化があった場合のみ」というif文をつけないと無限ループしてしまうので注意してください。
+
+これで（ほぼ）完成です！手入力された値がセットされているフォームであっても、描画時にすべての値が選択状態になってくれるようになりました🙆‍♂️
+
+> 最初に貼った動画は [Stimulusコントローラーを自作してTom Selectの色々なワーディングを日本語にしたりしています](https://symfony.com/bundles/ux-autocomplete/current/index.html#extending-tom-select) が、その辺りの細かいやり方はまた別の機会に記事にするかもしれません🙏
+
+# おまけ：`handleRequest()` によってデータがセットされるフォームへの対応
+
+「（ほぼ）完成」と言ったのは、実はこれだけだと特定のユースケースにおいて期待どおりの挙動がなされないためです。
+
+具体的には、コンストラクタ引数や `setData()` ではなく `handleRequest()` によってデータがセットされるようなフォームで、`choices` の内容が修正されないため、手入力されたデータがフロントエンドでの描画時に表示されない問題が発生します。
+
+例えば検索フォームなどではクエリパラメータを `handleRequest()` することでデータをセットする実装が一般的でしょうから、このケースに当てはまります。
+
+この問題に対処するため、`PRE_SET_DATA` だけでなく `PRE_SUBMIT` にもイベントリスナーを仕込みます。
+
+実装例は以下のようになります。
+
+```diff
+  <?php
+  
+  declare(strict_types=1);
+  
+  namespace App\Form;
+  
+  use Symfony\Component\Form\AbstractType;
+  use Symfony\Component\Form\Extension\Core\Type\ChoiceType;
+  use Symfony\Component\Form\FormBuilderInterface;
+  use Symfony\Component\Form\FormEvent;
+  use Symfony\Component\Form\FormEvents;
+  use Symfony\Component\OptionsResolver\OptionsResolver;
+  
+  class CreatableChoiceType extends AbstractType
+  {
++     public function __construct(private PropertyAccessorInterface $propertyAccessor) // ③
++     {
 +     }
 + 
-      public function configureOptions(OptionsResolver $resolver): void
-      {
-          $resolver->setDefaults([
-              'attr' => [
-                  'data-placeholder' => '選択または入力してください',
-                  'data-controller' => 'autocomplete',
-              ],
-              'autocomplete' => true,
-              'tom_select_options' => [
-                  'create' => true,
-                  'createOnBlur' => true,
-                  'persist' => false,
-              ],
-          ]);
-      }
-  
-      public function getParent(): string
-      {
-          return ChoiceType::class;
-      }
-  }
-```
-
-その上で、[Symfony UX Autocompleteの公式ドキュメントのここ](https://symfony.com/bundles/ux-autocomplete/current/index.html#extending-tom-select) などを参考にStimulusのコントローラーを以下のような内容で書きます。
-
-```js
-// assets/controllers/custom-autocomplete_controller.js
-import { Controller } from '@hotwired/stimulus'
-
-export default class extends Controller {
-  initialize() {
-    this._onPreConnect = this._onPreConnect.bind(this)
-    this._onConnect = this._onConnect.bind(this)
-  }
-
-  connect() {
-    this.element.addEventListener('autocomplete:pre-connect', this._onPreConnect)
-    this.element.addEventListener('autocomplete:connect', this._onConnect)
-  }
-
-  disconnect() {
-    this.element.removeEventListener('autocomplete:pre-connect', this._onConnect)
-    this.element.removeEventListener('autocomplete:connect', this._onPreConnect)
-  }
-
-  _onPreConnect(event) {
-  }
-
-  _onConnect(event) {
-    const options = event.detail.options
-    const tomSelect = event.detail.tomSelect
-    
-    // 選択肢の追加が可能な項目において、リスト外の値も含めたすべての値を初期値に反映する
-    if (options.create) { // ①
-      tomSelect.clearActiveItems() // ②
-      JSON.parse(tomSelect.input.dataset.data).forEach((value) => { // ③
-        tomSelect.addOption({value, text: value}, true) // ④
-        tomSelect.addItem(value, true) // ⑤
-      })
-    }
-  }
-}
-```
-
-①は、Tom Selectの `create` オプションが有効な項目のみを対象とするためのif文です。
-
-②で一旦すべての選択を解除したあと、③で `data-data` 属性から取得した値リストに対するイテレートを開始し、イテレート内では、④で（選択肢自体がない場合＝手入力された値の場合は）選択肢自体を追加し、⑤でそれを選択状態にしています。
-
-あとはこのStimulusコントローラーをCreatableChoiceTypeに割り当てればOKです。
-
-```diff
-  <?php
-  
-  declare(strict_types=1);
-  
-  namespace App\Form;
-  
-  use Symfony\Component\Form\AbstractType;
-  use Symfony\Component\Form\Extension\Core\Type\ChoiceType;
-  use Symfony\Component\Form\FormBuilderInterface;
-  use Symfony\Component\Form\FormEvent;
-  use Symfony\Component\Form\FormEvents;
-  use Symfony\Component\Form\FormInterface;
-  use Symfony\Component\Form\FormView;
-  use Symfony\Component\OptionsResolver\OptionsResolver;
-  
-  class CreatableChoiceType extends AbstractType
-  {
       public function buildForm(FormBuilderInterface $builder, array $options): void
       {
-          parent::buildForm($builder, $options);
-  
           $builder->addEventListener(FormEvents::PRE_SUBMIT, fn (FormEvent $event) => $event->stopPropagation(), 1);
           $builder->addEventListener(FormEvents::POST_SUBMIT, fn (FormEvent $event) => $event->stopPropagation(), 1);
           $builder->resetViewTransformers();
+  
+          $builder->addEventListener(FormEvents::PRE_SET_DATA, $this->onPreSetData(...));
++         $builder->addEventListener(FormEvents::PRE_SUBMIT, $this->onPreSubmit(...), 2); // ①
       }
   
-      public function buildView(FormView $view, FormInterface $form, array $options): void
+      public function onPreSetData(PreSetDataEvent $event): void
       {
-          parent::buildView($view, $form, $options);
-  
-          $data = json_encode($view->vars['data'], JSON_UNESCAPED_UNICODE | JSON_THROW_ON_ERROR);
-          $view->vars['attr']['data-data'] = $data;
+          $this->updateChoices($event->getForm(), $event->getData());
       }
++ 
++     public function onPreSubmit(PreSubmitEvent $event): void
++     {
++         if ($event->getForm()->getData() === null || $event->getForm()->getData() === []) { //
++             $this->setDataAndUpdateChoices($event->getForm(), $event->getData());           // ②
++         }                                                                                   //
++     }
   
       public function configureOptions(OptionsResolver $resolver): void
       {
           $resolver->setDefaults([
               'attr' => [
                   'data-placeholder' => '選択または入力してください',
-+                 'data-controller' => 'custom-autocomplete',
               ],
               'autocomplete' => true,
               'tom_select_options' => [
@@ -322,14 +319,55 @@ export default class extends Controller {
       {
           return ChoiceType::class;
       }
+  
+      private function updateChoices(FormInterface $form, mixed $data): void
+      {
+          $fieldName = trim(strval($form->getPropertyPath()), '[]');
+          $fieldOptions = $form->getConfig()->getOptions();
+          $fieldOptions['choices'] ??= null;
+  
+          $parent = $form->getParent();
+  
+          $originalChoices = $fieldOptions['choices'];
+  
+          if ($fieldOptions['multiple']) {
+              $data ??= [];
+              $fieldOptions['choices'] = array_unique([...$originalChoices, ...array_combine($data, $data)]);
+          } else {
+              $fieldOptions['choices'][strval($data)] = strval($data);
+          }
+  
+          if ($originalChoices !== $fieldOptions['choices']) {
+              $type = $form->getConfig()->getType()->getInnerType();
+              $parent->add($fieldName, $type::class, $fieldOptions);
+          }
+      }
++ 
++     private function setDataAndUpdateChoices(FormInterface $form, mixed $data): void // ④
++     {
++         $parentData = $form->getParent()?->getData();
++         $propertyPath = $form->getPropertyPath();
++ 
++         if ($parentData === null || $propertyPath === null || $data === null) {
++             return;
++         }
++ 
++         $this->propertyAccessor->setValue($parentData, $propertyPath, $data);
++ 
++         $this->updateChoices($form, $data);
++     }
   }
 ```
 
-これで、手入力された値がセットされているフォームであっても、描画時にすべての値が選択状態になってくれるようになりました🙆‍♂️
+番号振りが上から順ではないので要注意ですが、まず①で `PRE_SUBMIT` にイベントリスナーを登録します。ここで、すでに登録済みの、「以降のイベントリスナーへのイベントの伝播を止めるイベントリスナー」よりも高い優先度である `2` を明示的に指定している点に注意してください。
 
-以上で完成です🎉
+②では、フォームにセットされているデータが空の場合のみ、「データをセットした上で `choices` を更新する処理」を実行する、ということをしています。これは、`PRE_SET_DATA` 時点で `choices` が更新されていないフォームがsubmitされると、`PRE_SUBMIT` 時点ではデータは空になっているというのがSymfony Formの仕様[^1]であるため、その場合にのみ、改めてデータをセットした上で `choices` を更新する、ということをする必要があるためです。
 
-> 最初に貼った動画はStimulusコントローラーをもう少しいじっていて、Tom Selectの色々なワーディングを日本語にしたりしていますが、その辺りの細かいやり方はまた別の機会に記事にするかもしれません🙏
+[^1]: ドキュメントやコードの該当箇所を調べたわけではなく実験的に知ったことなので詳細はよく分かっていません🙏 詳しい方いたらぜひコメントください🙏
+
+最後に③と④です。この時点でフォームフィールドに `setData()` をしても、親フォームのデータの対応するフィールドのデータは上書きされないので、親フォームのデータ自体に対してフィールド名を指定してデータをセットする必要があり、そのために [Property Accessor](https://symfony.com/doc/current/components/property_access.html) を使用しています。③でProperty AccessorをDIして、④のメソッドでそれを使って親フォームにデータをセットし、その上で先ほど作成した `updateChocies()` メソッドを呼んで `choices` を更新しているというわけです。
+
+これで、今度こそ完璧に動作するものができたはずです🎉
 
 # ちなみに
 
