[esa2github] Update post.

--- a/articles/52d9713011fd03.md
+++ b/articles/52d9713011fd03.md
@@ -62,7 +62,7 @@ export const languages: Partial<SupportLanguage>[] = [
 ];
 ```
 
-`languages` は、プラグインがPrettierに対して提供する言語定義の配列です。`SupportLanguage` 型のうち `name` と `parsers` の2つのプロパティのみが必須です。
+`languages` は、プラグインがPrettierに対して提供する言語定義の配列です。[`SupportLanguage`](https://github.com/prettier/prettier/blob/3.3.3/src/index.d.ts#L651-L666) 型のうち `name` と `parsers` の2つのプロパティのみが必須です。
 
 `name`に は対象の言語の名称を任意の文字列として設定し[^1]、`parsers` にはこの言語のパースに使用されたいパーサーの名称を配列で設定します。パーサーの名称は次項の `parsers` の定義に使用するものと同一である必要があります。
 
@@ -92,6 +92,8 @@ export const parsers: Record<string, Parser> = {
 ```
 
 ルートのキー `anywhere` は、`languages` で `parsers` に指定した名称と同一である必要があります。
+
+値のほうは、[`Parser`](https://github.com/prettier/prettier/blob/3.3.3/src/index.d.ts#L459-L468) 型のうち `parse` `astFormat` `locStart` `locEnd` の4つのプロパティが必須です。
 
 `parse` プロパティにパーサー関数を渡します。ここではモジュール化しているので実際のパーサーの実装については後述します。
 
@@ -148,7 +150,6 @@ export const parse = async (
   }
 
   return {
-    type: "anywhere",
     body: formattedText,
     start: 0,
     end: text.length,
@@ -158,14 +159,14 @@ export const parse = async (
 
 こちらは本筋ではないので詳細な解説は省きますが、
 
-* もとのコードを `text` で受け取る
-* Prettierに対して与えられたオプションを `options` で受け取る
+* もとのコードを `text` 引数で受け取る
+* Prettierに対して与えられたオプションを `options` 引数で受け取る
 * それらを使って文字列の置換によって整形後のコードを生成する
 * `AnywhereNode` の形で返す
 
 ということを行っています。
 
-最後に `return` している `AnywhereNode` のうち、`start` と `end` が先ほど `parsers` の `locStart` `locEnd` で使用したものです。`type` と `body` は次項の `printers` の定義に使用する `printer` の実装で独自に利用します。
+最後に `return` している `AnywhereNode` のうち、`start` と `end` が先ほど `parsers` の `locStart` `locEnd` で使用したものです。`body` は次項の `printers` の定義に使用する `printer` の実装で独自に利用します。
 
 # `printers`
 
@@ -183,7 +184,7 @@ export const printers: Record<string, Printer> = {
 
 ルートのキー `anywhere` は、`parsers` で `astFormat` に指定した名称と同一である必要があります。
 
-`print` プロパティだけが必須で、ここにプリンター関数を渡します。ここではモジュール化しています。プリンターの実装は以下のとおりです。
+値のほうは、[`Printer`](https://github.com/prettier/prettier/blob/3.3.3/src/index.d.ts#L470-L556) 型のうち `print` プロパティのみが必須で、ここにプリンター関数を渡します。ここではモジュール化しています。プリンターの実装は以下のとおりです。
 
 ```ts:parser.ts
 import type { AstPath, Doc } from "prettier";
@@ -220,7 +221,7 @@ export const options: Record<string, SupportOption> = {
 };
 ```
 
-ここでは `regex` オプションを定義しています。`type` と `category` が必須です。
+ここでは `regex` オプションを定義しています。`type` と `category` の2つのプロパティのみが必須です。
 
 `type` の型は以下のとおり、
 
