[esa2github] Update post.

--- a/articles/309423d26a1aaa.md
+++ b/articles/309423d26a1aaa.md
@@ -2,7 +2,7 @@
 title: "無料で商用にも使える日本の郵便番号APIをリリースしました"
 emoji: "💌"
 type: "tech"
-topics: ["api", "php", "symfony"]
+topics: ["api", "php", "symfony", ""]
 published: true
 ---
 
@@ -230,7 +230,7 @@ https://github.com/ttskch/jp-postal-code-api/blob/8d8626dbcf8102599554f4d2c98262
 
 という方法でWorkflowの自動的な無効化を回避しています（ごめんなさい）。
 
-https://github.com/ttskch/jp-postal-code-api/blob/8d8626dbcf8102599554f4d2c982628d8b7a694b/.github/workflows/cron.yaml#L61-L91
+https://github.com/ttskch/jp-postal-code-api/blob/2bd2eb4ca4af1fced4f113c7782d0aff703ad209/.github/workflows/cron.yaml#L60-L90
 
 [Workflowの有効化はAPI経由でも行える](https://docs.github.com/ja/rest/actions/workflows?apiVersion=2022-11-28) ので、自動的に無効になったらAPI経由で再度有効化する、みたいな対応も考えられましたが、GitHub Actionsだけで完結できたほうが嬉しいのでこのような方法をとりました。
 
