[esa2github] Update post.

--- a/articles/a21abe732716bb.md
+++ b/articles/a21abe732716bb.md
@@ -1,5 +1,5 @@
 ---
-title: "[Symfony][Doctrine] `DATABASE_URL` 環境変数に付加する `serverVersion` とは何なのか、省略するとどんな影響があるのか"
+title: "`DATABASE_URL` 環境変数に付加する `serverVersion` とは何なのか、省略するとどんな影響があるのか"
 emoji: "🎻"
 type: "tech"
 topics: ["php", "symfony", "doctrine"]
