[esa2github] Update post.

--- a/articles/90d8122e940c46.md
+++ b/articles/90d8122e940c46.md
@@ -1,8 +1,8 @@
 ---
 title: "Render.comのPostgreSQLのダンプをS3に毎日バックアップして直近1ヶ月分だけを残す"
-emoji: "🎻"
+emoji: "💽"
 type: "tech"
-topics: ["render", "database", "postgresql", "backup", "aws", "s3]
+topics: ["render", "database", "postgresql", "backup", "aws", "s3"]
 published: true
 ---
 
